--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "Pundits",
+  "name": "new-chat-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC"
-  
+  "license": "ISC",
+  "description": ""
 }
